--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,6 @@
     "nodemon": "^3.1.11",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
-    "stripe": "^20.0.0"
+    "razorpay": "^2.9.6"
   }
 }
