--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "googleapis": "^166.0.0",
@@ -19,6 +21,7 @@
     "nodemon": "^3.1.11",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
+    "razorpay": "^2.9.6",
     "stripe": "^20.0.0"
   }
 }
