--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "googleapis": "^166.0.0",
+    "html-pdf-node": "^1.0.8",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.11",
     "pdfkit": "^0.17.2",
