--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,17 @@
       }
     }
   ],
-  "rewrites": [
-    { "source": "/api/:path*", "destination": "/server/index.js" },
-    { "source": "/:path*", "destination": "/index.html" }
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/server/index.js"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/client/dist/index.html"
+    }
   ]
 }
