--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,9 @@
     "fs": "^0.0.1-security",
     "googleapis": "^166.0.0",
     "html-pdf-node": "^1.0.8",
+    "ical": "^0.8.0",
+    "node-fetch": "^2.7.0",
+    "node-ical": "^0.25.3",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.11",
     "pdfkit": "^0.17.2",
