--- a/vercel.json
+++ b/vercel.json
@@ -13,14 +13,14 @@
       }
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/server/index.js"
+      "source": "/api/:path*",
+      "destination": "/server/index.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "/client/$1"
+      "source": "/:path*",
+      "destination": "/client/dist/index.html"
     }
   ]
 }
